--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "daily-life-tracker-worker"
+name = "tracker"
 main = "worker/src/index.ts"
 compatibility_date = "2024-12-28"
 compatibility_flags = ["nodejs_compat"]
