Add next-on-pages build

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "next build && next-on-pages",
     "start": "next start",
     "lint": "eslint",
     "worker:dev": "wrangler dev worker/src/index.ts --local",
@@ -20,6 +21,7 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.14.1",
     "@cloudflare/workers-types": "^4.20241230.0",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
