--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,9 @@ main = "worker/src/index.ts"
 compatibility_date = "2024-12-28"
 compatibility_flags = ["nodejs_compat"]
 
+# Pages build output (for next-on-pages)
+pages_build_output_dir = ".vercel/output/static"
+
 [[d1_databases]]
 binding = "DB"
 database_name = "daily-life-tracker-db"
